# ModernCPP-TaskManager

./: .gitignore  README.md
C++_IO_FILE_STREAMS/: CMakeLists.txt  binary_random_access.cpp  file_write_read.cpp  string_streams.cpp
DSA/: CMakeLists.txt  task_manager_thread_with_mutex.cpp
OOPS/: CMakeLists.txt  bank_account_class.cpp
SmartPointers/: CMakeLists.txt  circular_reference_problem.cpp  unique_ptrs.cpp
TaskManager/: CMakeLists.txt  simple_counter_with_atomic.cpp  simple_counter_with_mutex.cpp  simple_task_manager.cpp  square_number_using_thread.cpp  task_manager_thread_producer_consumer_model.cpp  task_manager_with_simple_thread_pool_1.cpp  task_manager_with_simple_thread_pool_2.cpp
Templates/: CMakeLists.txt  pair_class_template.cpp  std_max_function_template.cpp
cpp11_sort_and_task_manager/: CMakeLists.txt  main.cpp  taskManager.cpp
cpp11_version/: CMakeLists.txt
cpp14_sort_and_task_manager/: CMakeLists.txt  main.cpp  taskManager.cpp
cpp14_version/: CMakeLists.txt  main.cpp
cpp17_sort_and_task_manager/: CMakeLists.txt  main.cpp
cpp17_version/: CMakeLists.txt  taskManager.cpp
cpp20_sort_and_task_manager/: CMakeLists.txt  main.cpp
cpp20_version/: CMakeLists.txt  taskManager.cpp
