#cmake
cmake_minimum_required(VERSION 3.5)
project(cpp17_app)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(simple_task_manager simple_task_manager.cpp)
add_executable(task_manager_thread_mutex task_manager_thread_with_mutex.cpp)
add_executable(task_manager_thread_pro_con task_manager_thread_producer_consumer_model.cpp)
add_executable(task_manager_simple_thread_pool_1 task_manager_with_simple_thread_pool_1.cpp)